add new images, update for professionalism

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     display: flex;
     justify-content: space-between;
     background-image: url(snail.jpg);
@@ -14,4 +14,4 @@ div {
     border: 10px solid red;
     background-color: pink;
 
-}
+}*/
