--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ h1 {
     font-size:400%;
     font-family:verdana;
     text-align:center;
-    background-color:lightblue;
+    background-image: url('/images/grassy.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    height: 100px;
 }
 
 pre {
@@ -21,4 +25,33 @@ div {
     border:5px solid gold;
     padding: 10px;
     margin: 10px;
+    
+}
+
+a:link, a:visited {
+    background-color: blue;
+    color: aqua;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bolder;
+}
+
+a:hover, a:active {
+    background-color: red;
+}
+
+table, th, td {
+    border:1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 15px;
+    border-spacing: 10px;
+}
+
+th {
+    text-align: right;
 }
