--- a/style.css
+++ b/style.css
@@ -120,3 +120,12 @@ tr:hover {
     color: darkblue;
     font-family: 'Times New Roman', Times, serif;
 }
+
+#snailtextarea {
+    width:70px;
+    height:50px;
+}
+
+#snailcolortitle {
+    font-size: 2vw;
+}
