--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightpink;
+    background: url("/images/gradient2.jpg") fixed;
 }
 
 h1 {
@@ -13,15 +13,44 @@ h1 {
     height: 100px;
 }
 
+i {
+    color: orange;
+}
+
+#quote {
+    background-color: rgba(16, 77, 105, 0.4);
+    border-style: solid;
+    border-top-style: none;
+    border-bottom-style: none;
+    border-right-style: none;
+    border-width: 4px;
+    border-radius: 20px;
+    border-color: rgb(202, 3, 176);
+    margin: auto;
+    outline: 2px solid rgb(219, 186, 123);
+    outline-offset: 1px;
+}
+
+#marginauto {
+    width: 300px;
+    font-size: 25px;
+    border: 2px solid blue;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 20px;
+    outline: 2px solid red;
+    text-shadow: 4px 3px 3px rgb(203, 58, 240), 
+    2px 2px 25px blue, 5px 5px 10px teal;
+}
+
 pre {
     color:red;
 }
 
-b {
-    color:green;
-}
-
 div {
+    background: url('/images/grassy.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     border:5px solid gold;
     padding: 10px;
     margin: 10px;
@@ -38,8 +67,14 @@ div {
     font-weight: bolder;
 }
 
+ul {
+    list-style-image: url("/images/snailemoji.png");
+    list-style-position: inside;
+}
+
 .buhbus:hover, .buhbus:active {
     background-color: red;
+    opacity: 0.2;
 } 
 
 .ask:link, .ask:visited {
@@ -67,65 +102,7 @@ th, td {
 }
 
 tr:hover {
-    background-color: red;
-    color: blue;
+    background-color: rgba(235, 23, 23, 0.8);
+    color: black;
 }
 
-#yappers {
-    height: 25px;
-    background-color: bisque;
-    border: 5px solid gold;
-}
-
-#directions {
-    list-style-type: square;
-}
-
-#snailsare {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: darkseagreen;
-    margin: 0;
-    padding: 0;
-}
-
-.list {
-    float: left;
-}
-
-.are {
-    display: block;
-    color: darkgreen;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-    background-color: rgb(138, 219, 192);
-}
-
-#uselessButton {
-    font-size: 15px;
-    font-weight: bolder;
-}
-
-#fruffles {
-    border: 2px solid black;
-}
-
-#iframe {
-    border:3px solid darkorchid;
-}
-
-#iframeExplanation {
-    font-size: 20px;
-    color: darkblue;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-#snailtextarea {
-    width:70px;
-    height:50px;
-}
-
-#snailcolortitle {
-    font-size: 2vw;
-}
