--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
     background: url("/images/gradient2.jpg") fixed;
 }
 
-h1 {
+.toptitle {
+    position: sticky;
+    padding-top: 12px;
+    background-color: rgb(141, 141, 223);
+    top: 0;
     font-size:400%;
     font-family:verdana;
     text-align:center;
-    background-image: url('/images/grassy.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
     height: 100px;
 }
 
@@ -47,10 +47,10 @@ pre {
     color:red;
 }
 
-div {
+.box {
     background: url('/images/grassy.jpg');
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     border:5px solid gold;
     padding: 10px;
     margin: 10px;
@@ -65,6 +65,19 @@ div {
     text-decoration: none;
     display: inline-block;
     font-weight: bolder;
+}
+
+.twosnails {
+    position: relative;
+    z-index: -1;
+}
+
+.twosnailstext {
+    color:rgb(203, 58, 240);
+    text-shadow: 3px 3px 5px black;
+    position: absolute;
+    top: 50%;
+    font-size: 30px;
 }
 
 ul {
@@ -106,3 +119,10 @@ tr:hover {
     color: black;
 }
 
+#overflow {
+    background-color: green;
+    width: 400px;
+    height: 120px;
+    font-size: 200%;
+    overflow: auto;
+}
